feat(tests): create tests with PestPHP
